[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/SFSCon.gd" type="Script" id=1]
[ext_resource path="res://src/actors/tux/Tux.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/backgroundForest.png" type="Texture" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 869.456, 128 )

[sub_resource type="RectangleShape2D" id=14]

[sub_resource type="Animation" id=15]
resource_name = "FadeIn"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "FadeOut"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.43, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="SFSCon" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 60.5811, -297.56 )
motion_mirroring = Vector2( 2048, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -106.333, -75.8492 )
texture = ExtResource( 3 )
centered = false

[node name="Tux" parent="." instance=ExtResource( 2 )]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 15, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 835.722, 475.364 )
shape = SubResource( 13 )

[node name="PointDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointDetector"]
position = Vector2( 62.5083, 306.185 )
shape = SubResource( 14 )

[node name="BoxSpawner" type="Node2D" parent="."]

[node name="HUD" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD"]
margin_left = 564.819
margin_top = 10.0
margin_right = 748.819
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="HUD"]
margin_left = 788.651
margin_top = 10.0
margin_right = 873.651
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HI 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -319.0
margin_top = -35.0
margin_right = 319.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PRESS SPACEBAR TO JUMP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1022.0
margin_bottom = 592.0
color = Color( 0.717647, 0.905882, 0.980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 15 )
anims/FadeOut = SubResource( 16 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="game_over" from="Tux" to="." method="_on_Tux_game_over"]
[connection signal="body_entered" from="PointDetector" to="." method="_on_PointDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
